--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -4,7 +4,7 @@
 {% block app_content %}
   <h1>{{ "Sign In" }}</h1>
   <div class="row">
-    <div class="col-md-4">{{ render_form(form) }}</div>
+    <div class="col-xl-4 col-lg-6 col-md-8">{{ render_form(form) }}</div>
   </div>
   <br>
   <p>
