--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -6,7 +6,7 @@
            class="list-group-item list-group-item-action {% if field.fields[0].field_type.name == 'grassland' %} bg-grassland {% elif field.fields[0].field_type.name == 'cropland' %} bg-cropland {% else %} bg-custom {% endif %} text-white sidebar-item"
            id="{{ field.id }}">
           <div class="d-flex w-100 justify-content-between">
-            <span class="mb-1">{{ "{prefix:02d}-{suffix} {name}".format(prefix=field.prefix, suffix=field.suffix, name=field.name) }}</span>
+            <span class="fw-500 mb-1">{{ "{prefix:02d}-{suffix} {name}".format(prefix=field.prefix, suffix=field.suffix, name=field.name) }}</span>
           </div>
         </a>
       {% endfor %}
