--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -7,14 +7,23 @@ html {
   --content-height: calc(100vh - 57px);
 }
 
-#main {
-  height: var(--content-height);
+main {
   scrollbar-width: thin;
-  padding: 1em;
-  /* push footer to bottom */
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* justify-content: space-between; */
+  padding: 1em 1.5em !important;
+}
+
+#content {
+  height: var(--content-height);
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* custom styling */
+
+.fw-500 {
+  font-weight: 500;
 }
 
 .table-action {
@@ -47,7 +56,7 @@ html {
 
 .nav-masthead .nav-link {
   padding: 0.1rem 0;
-  /* font-weight: 700; */
+  font-weight: 500;
   color: rgba(255, 255, 255, 0.5);
   background-color: transparent;
   border-bottom: 0.1rem solid transparent;
@@ -101,10 +110,21 @@ html {
   margin: -1px 0 0;
 }
 
+/* footer styling */
+
+#footer {
+  border-top: 1px solid black;
+  height: 2.55rem;
+}
+
 /* scrollbar styling */
 
 #sidebar::-webkit-scrollbar {
   width: 5px;
+}
+
+#sidebar::-webkit-scrollbar-track {
+  background-color: #777;
 }
 
 #sidebar::-webkit-scrollbar-thumb {
