--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -39,14 +39,17 @@
       {% endblock sidebar %}
 
       <!-- Page content -->
-      <div class="col overflow-auto d-flex flex-column justify-content-between"
-           id="main">
+      <div class="col" id="content">
         <!-- Main content -->
-        {% block content %}
-        {% endblock content %}
+        <main class="container-fluid">
+          {% block content %}
+          {% endblock content %}
+        </main>
         <!-- Footer -->
-        {% block footer %}
-        {% endblock footer %}
+        <footer class="container-fluid p-0">
+          {% block footer %}
+          {% endblock footer %}
+        </footer>
       </div>
     </div>
 
