--- a/app/templates/field_footer.html
+++ b/app/templates/field_footer.html
@@ -8,11 +8,15 @@
           <div class="border bg-light" id="n">-</div>
         </div>
         <div class="col p-0">
-          <div class="fw-500 pb-1">P<sub>2</sub>O<sub>5</sub></div>
+          <div class="fw-500 pb-1">
+            P<sub>2</sub>O<sub>5</sub>
+          </div>
           <div class="border bg-light" id="p2o5">-</div>
         </div>
         <div class="col p-0">
-          <div class="fw-500 pb-1">K<sub>2</sub>O</div>
+          <div class="fw-500 pb-1">
+            K<sub>2</sub>O
+          </div>
           <div class="border bg-light" id="k2o">-</div>
         </div>
         <div class="col p-0">
@@ -35,9 +39,9 @@
 
 <script>
   window.addEventListener("load", () => {
-    const field_id = JSON.parse(document.getElementById("data").textContent);
-    //const room_url = {{ url_for("main.field_data", id=field_id) }};
-    const room_url = "/field_data/" + field_id.toString();
+    //const field_id = JSON.parse(document.getElementById("data").textContent);
+    //const room_url = "/field_data/" + field_id.toString();
+    const room_url = "{{ url_for('main.field_data', id=base_field.id) }}";
     fetch(room_url)
       .then(response => response.json())
       .then(data => {
