--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -24,43 +24,42 @@
     <ul class="navbar-nav">
       {{ render_nav_item("main.index", "Home", _use_li=True)}}
       {{ render_nav_item("main.preset", "Preset", _use_li=True) }}
+      {% if request.endpoint and request.endpoint == "main.index" or request.endpoint == "main.field" %}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle position-relative no-highlight"
+             id="cultivationDropdown"
+             role="button"
+             data-bs-toggle="dropdown"
+             aria-expanded="false">
+            Cultivation <span class="badge bg-primary translate-middle position-absolute">{{ "{year:d}".format(year=current_user.year) }}</span>
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="cultivationDropdown">
+            <li>
+              <h6 class="dropdown-header">Select a year:</h6>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            {% for year in current_user.get_years() %}
+              <li>
+                <form action="{{ url_for('main.set_year', year=year) }}", method="post">
+                  {{ form.hidden_tag() }}
+                  {% if year == current_user.year %}
+                    {{ form.submit(value=year, class="dropdown-item active") }}
+                  {% else %}
+                    {{ form.submit(value=year, class="dropdown-item") }}
+                  {% endif %}
+                </form>
+              </li>
+            {% endfor %}
+          </ul>
+        </li>
+      {% endif %}
     </ul>
     <ul class="navbar-nav ms-auto">
       {% if current_user.is_anonymous %}
         {{ render_nav_item("auth.login", "Login", _use_li=True) }}
       {% else %}
-        {% if request.endpoint and request.endpoint == "main.index" or request.endpoint == "main.field" %}
-          <li class="nav-item text-white dropdown">
-            <a class="nav-link dropdown-toggle"
-               href="#"
-               id="cultivationDropdown"
-               role="button"
-               data-bs-toggle="dropdown"
-               aria-expanded="false">
-              Cultivation
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="cultivationDropdown">
-              <li>
-                <h6 class="dropdown-header">Select a year:</h6>
-              </li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              {% for year in current_user.get_years() %}
-                <li>
-                  <form action="{{ url_for('main.set_year', year=year) }}", method="post">
-                    {{ form.hidden_tag() }}
-                    {% if year == current_user.year %}
-                      {{ form.submit(value=year, class="dropdown-item active") }}
-                    {% else %}
-                      {{ form.submit(value=year, class="dropdown-item") }}
-                    {% endif %}
-                  </form>
-                </li>
-              {% endfor %}
-            </ul>
-          </li>
-        {% endif %}
         {{ render_nav_item("main.user", "Profile", _use_li=True, username=current_user.username) }}
         {{ render_nav_item("auth.logout", "Logout", _use_li=True) }}
       {% endif %}
