--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,8 +1,7 @@
-<div class="container-fluid">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-4 border-top">
+<div class="container-fluid p-normal">
+  <div class="d-flex flex-wrap justify-content-between align-items-center pt-3 mt-4 border-top">
     <p class="col-sm mb-0 text-muted">© 2021 Company, Inc</p>
-    {# <a href="#"
-       class="col-sm d-flex align-items-center justify-content-center link-dark text-decoration-none">
+    {# <a href="#" class="col-sm d-flex align-items-center justify-content-center link-dark text-decoration-none">
       <img src="{{ url_for('static', filename='img/favicon.png') }}" alt="footer favicon" height="16px" width="16px">
     </a> #}
     <ul class="nav col-sm justify-content-end">
@@ -22,5 +21,5 @@
         <a href="#" class="nav-link px-2 text-muted">About</a>
       </li>
     </ul>
-  </footer>
+  </div>
 </div>
