--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% import 'bootstrap5/utils.html' as utils %}
+{% import 'utils.html' as utils %}
 
 {% block title %}
   {% if title %}
@@ -20,12 +20,12 @@
 {% endblock sidebar %}
 
 {% block content %}
-  <div class="col-xl-4 col-lg-6 col-md-8">
-    {% with message = utils.render_messages(dismissible=True) %}
-      {% if message %}{{ message }}{% endif %}
-    {% endwith %}
-  </div>
+  <!-- Alert messages -->
+  {% with message = utils.render_messages(container=True) %}
+    {% if message %}{{ message }}{% endif %}
+  {% endwith %}
   {# application content needs to be provided in the app_content block #}
+  <!-- App content -->
   {% block app_content %}
   {% endblock app_content %}
 {% endblock content %}
