Fix toast transparency

--- a/app/templates/utils.html
+++ b/app/templates/utils.html
@@ -16,7 +16,7 @@
   {% endif -%}
 
   {% for cat, msg in messages %}
-      <div class="toast align-items-center bg-transparent show"
+      <div class="toast align-items-center show"
       role="alert"
       data-bs-autohide="false"
       aria-live="assertive"
