--- a/app/templates/field_footer.html
+++ b/app/templates/field_footer.html
@@ -1,34 +1,34 @@
 <div class="bg-custom border-top border-dark">
   <div class="row text-center m-0 py-2">
     <div class="col-md-3 col-sm-auto"></div>
-    <div class="col-xl-4 col-md-6 col">
-      <div class="row">
+    <div class="col-xxl-4 col-lg-5 col-md-6 col">
+      <div class="row fw-500">
         <div class="col p-0">
-          <div class="fw-500 pb-1">N</div>
+          <div class="pb-1">N</div>
           <div class="border bg-light" id="n">-</div>
         </div>
         <div class="col p-0">
-          <div class="fw-500 pb-1">
+          <div class="pb-1">
             P<sub>2</sub>O<sub>5</sub>
           </div>
           <div class="border bg-light" id="p2o5">-</div>
         </div>
         <div class="col p-0">
-          <div class="fw-500 pb-1">
+          <div class="pb-1">
             K<sub>2</sub>O
           </div>
           <div class="border bg-light" id="k2o">-</div>
         </div>
         <div class="col p-0">
-          <div class="fw-500 pb-1">MgO</div>
+          <div class="pb-1">MgO</div>
           <div class="border bg-light" id="mgo">-</div>
         </div>
         <div class="col p-0">
-          <div class="fw-500 pb-1">S</div>
+          <div class="pb-1">S</div>
           <div class="border bg-light" id="s">-</div>
         </div>
         <div class="col p-0">
-          <div class="fw-500 pb-1">CaO</div>
+          <div class="pb-1">CaO</div>
           <div class="border bg-light" id="cao">-</div>
         </div>
       </div>
@@ -45,9 +45,19 @@
     fetch(room_url)
       .then(response => response.json())
       .then(data => {
-        //console.log(data);
         for (let elem in data) {
-          document.getElementById(elem).textContent = Number(data[elem]).toFixed(0)
+          var element = document.getElementById(elem)
+          var value = Number(data[elem]).toFixed(0)
+          element.textContent = value
+          if (value > 0) {
+            element.classList.add("text-danger")
+          }
+          else if (value < 0) {
+            element.classList.add("text-primary")
+          }
+          else {
+            element.classList.add("text-success")
+          }
         };
       });
   });
