--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg p-0 align-items-start" id="sidebar" data-field-id="{{ base_field.id }}">
+<nav class="navbar navbar-expand-lg p-0 align-items-start" id="sidebar">
   <div class="navbar-collapse collapse" id="sidebarNav">
     <div class="list-group list-group-flush">
       {% for field in fields %}
