Add restoring of field-nav tab on page reload: - show tab on load and not on render (unfortunately slower) - remove localstorage item on field change

--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -13,8 +13,8 @@
   </div>
   <!-- field nav -->
   <nav class="nav nav-pills flex-column flex-sm-row border my-2"
-       id="field-tab">
-    <button class="nav-link flex-sm-fill text-sm-center active"
+       id="field-nav">
+    <button class="nav-link flex-sm-fill text-sm-center"
             id="cultivation-tab"
             data-bs-toggle="tab"
             data-bs-target="#cultivation"
@@ -55,9 +55,9 @@
       Info
     </button>
   </nav>
-  <div class="tab-content" id="field-tabContent">
+  <div class="tab-content" id="field-navContent">
     <!-- cult data -->
-    <div class="tab-pane fade show active"
+    <div class="tab-pane fade"
          id="cultivation"
          role="tabpanel"
          aria-labelledby="cultivation-tab">
