--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -12,7 +12,7 @@
     {% endfor %}
   </div>
   <!-- field nav -->
-  <nav class="nav nav-pills flex-column flex-sm-row border my-2"
+  <nav class="nav nav-pills flex-column flex-sm-row border my-2 d-print-none"
        id="field-nav">
     <button class="nav-link flex-sm-fill text-sm-center"
             id="cultivation-tab"
@@ -224,10 +224,10 @@
                   pH
                 </th>
                 <th scope="col">
-                  P2O5
+                  P<sub>2</sub>O<sub>5</sub>
                 </th>
                 <th scope="col">
-                  K2O
+                  K<sub>2</sub>O
                 </th>
                 <th scope="col">
                   Mg
@@ -277,8 +277,9 @@
          role="tabpanel"
          aria-labelledby="info-tab">
       <div class="row">
+      <div class="col-md-8">
       <!-- test table form -->
-        <div class="form-table">
+        {# <div class="container-fluid form-table text-nowrap">
           <div class="form-thead">
             <div class="form-tr">
               <div class="form-td">One</div>
@@ -295,14 +296,79 @@
               <div class="form-td">3</div>
               <div class="form-td">1234</div>
               <div class="form-td action">
-                {# <button type="button" id="test-btn" onclick="edit(this);">edit</button> #}
-                <button class="btn btn-sm btn-primary" type="button" id="test-btn" onclick="edit(this);"><i class="fa-solid fa-pen-to-square"></i></button>
-                <button class="btn btn-sm btn-success visually-hidden" type="button" onclick="save(this);">save</button>
-                <button class="btn btn-sm btn-danger visually-hidden" type="button" onclick="cancel(this);">cancel</button>
+                <!-- <button type="button" id="test-btn" onclick="edit(this);">edit</button> -->
+                <button class="text-primary border-0 bg-transparent" type="button" id="test-btn" onclick="edit(this);"><i class="fa-solid fa-pen-to-square fa-lg"></i></button>
+                <button class="text-success border-0 bg-transparent visually-hidden" type="button" onclick="save(this);"><i class="fa-solid fa-square-check fa-xl"></i></button>
+                <button class="text-danger border-0 bg-transparent visually-hidden" type="button" onclick="cancel(this);"><i class="fa-solid fa-square-xmark fa-xl"></i></button>
               </div>
             </form>
           </div>
-        </div>
+        </div> #}
+      <!-- test table form -->
+      <form></form>
+      <div class="table-responsive">
+      <table class="table table-sm table-hover caption-top align-middle">
+        <caption>List of soil samples</caption>
+        <thead class="no-border-top">
+          <tr>
+            <th scope="col">
+              Year
+            </th>
+            <th scope="col">
+              Type
+            </th>
+            <th scope="col">
+              Humus
+            </th>
+            <th scope="col">
+              pH
+            </th>
+            <th scope="col">
+              P2O5
+            </th>
+            <th scope="col">
+              K2O
+            </th>
+            <th scope="col">
+              Mg
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for sample in base_field.soil_samples %}
+            <tr data-sample-id="{{ sample.id }}">
+              <th scope="row">
+                {{ sample.year }}
+              </th>
+              <td class="select">
+                {{ sample.soil_type.value }}
+              </td>
+              <td class="select">
+                {{ sample.humus.value }}
+              </td>
+              <td class="input">
+                {{ sample.ph | format_number(".1f") }}
+              </td>
+              <td class="input">
+                {{ sample.p2o5 | format_number(".1f") }}
+              </td>
+              <td class="input">
+                {{ sample.k2o | format_number(".1f") }}
+              </td>
+              <td class="input">
+                {{ sample.mg | format_number(".1f") }}
+              </td>
+              <td class="action table-action d-print-none">
+                <button class="text-primary border-0 bg-transparent" type="button" id="test-btn" onclick="edit(this);"><i class="fa-solid fa-pen-to-square fa-lg"></i></button>
+                <button class="text-success border-0 bg-transparent visually-hidden" type="button" onclick="save(this);"><i class="fa-solid fa-square-check fa-xl"></i></button>
+                <button class="text-danger border-0 bg-transparent visually-hidden" type="button" onclick="cancel(this);"><i class="fa-solid fa-square-xmark fa-xl"></i></button>
+              </td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      </div>
+      </div>
       </div>
     </div>
   </div>
