Adapt navbar style to footer

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -56,6 +56,10 @@ main {
   background-color: cadetblue !important;
 }
 
+.bg-green {
+  background-color: var(--bs-green) !important;
+}
+
 /* toast styling */
 
 .toast {
