--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -12,9 +12,9 @@
     {% endfor %}
   </div>
   <!-- field nav -->
-  <nav class="nav nav-pills flex-column flex-sm-row border my-2 d-print-none"
+  <nav class="nav nav-pills bg-green rounded flex-column flex-sm-row my-2 d-print-none"
        id="field-nav">
-    <button class="nav-link flex-sm-fill text-sm-center"
+    <button class="nav-link fw-500 text-white flex-sm-fill text-sm-center"
             id="cultivation-tab"
             data-bs-toggle="tab"
             data-bs-target="#cultivation"
@@ -24,7 +24,7 @@
             aria-selected="true">
       Cultivation
     </button>
-    <button class="nav-link flex-sm-fill text-sm-center"
+    <button class="nav-link fw-500 text-white flex-sm-fill text-sm-center"
             id="fertilization-tab"
             data-bs-toggle="tab"
             data-bs-target="#fertilization"
@@ -34,7 +34,7 @@
             aria-selected="false">
       Fertilization
     </button>
-    <button class="nav-link flex-sm-fill text-sm-center"
+    <button class="nav-link fw-500 text-white flex-sm-fill text-sm-center"
             id="soil-tab"
             data-bs-toggle="tab"
             data-bs-target="#soil"
@@ -44,7 +44,7 @@
             aria-selected="false">
       Soil
     </button>
-    <button class="nav-link flex-sm-fill text-sm-center"
+    <button class="nav-link fw-500 text-white flex-sm-fill text-sm-center"
             id="info-tab"
             data-bs-toggle="tab"
             data-bs-target="#info"
