--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -5,6 +5,8 @@ html {
 
 :root {
   --content-height: calc(100vh - 57px);
+  --green-40: #24c278;
+  --green-50: #20ac6b;
 }
 
 main {
@@ -63,11 +65,11 @@ main {
 /* field-nav styling */
 
 #field-nav .nav-link.active {
-  background-color: #24c278;
+  background-color: var(--green-40);
 }
 
 #field-nav .nav-link:hover:not(.active) {
-  background-color: #20ac6b;
+  background-color: var(--green-50);
 }
 
 /* toast styling */
@@ -100,7 +102,7 @@ main {
   border-bottom-color: rgba(255, 255, 255, 0.25);
 }
 
-.nav-masthead .nav-link + .nav-link {
+.nav-masthead .nav-item + .nav-item {
   margin-left: 1rem;
 }
 
