--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -102,7 +102,7 @@ main {
   border-bottom-color: rgba(255, 255, 255, 0.25);
 }
 
-.nav-masthead .nav-item + .nav-item {
+.nav-masthead .nav-link + .nav-link {
   margin-left: 1rem;
 }
 
